# frePPLe

./: Makefile.dist  configure.ac
contrib/debian/: control  frepple.install  rules
contrib/django/: djangosettings.py
contrib/django/freppledb/common/: adminforms.py  report.py
contrib/django/freppledb/common/templatetags/: base_utils.py
contrib/django/freppledb/execute/: commands.py  load.py  loadxml.py  views.py
contrib/django/freppledb/execute/tests/: test_cookbook.py
contrib/django/freppledb/input/: admin.py  tests.py
contrib/django/freppledb/odoo/: commands.py
contrib/installer/: README.txt  frepple.nsi
contrib/rpm/: frepple.spec
contrib/vc/: Makefile.am  README.txt  build.bat
doc/: Makefile.am  conf.py  frepple.doxyfile  generate.py  index.rst
doc/extension-modules/: index.rst
doc/installation-guide/: linux-binaries.rst  linux-compiling.rst  multi-model.rst  vmware.rst  windows-apache.rst  windows-compiling.rst
doc/modelling-guide/: buffer.rst  calendar.rst  customer.rst  demand.rst  flow.rst  index.rst  item.rst  load.rst  location.rst  operation.rst  operationplan.rst  resource-skill.rst  resource.rst  setup-matrix.rst  skill.rst
doc/user-guide/: data-maintenance.rst  index.rst  supported-browsers.rst
doc/user-guide/getting-around/: index.rst
include/frepple/: model.h  solver.h
modules/lp_solver/: lpsolver.cpp  lpsolver.h
src/model/: flow.cpp  operationplan.cpp
src/solver/: solverbuffer.cpp  solverdemand.cpp  solverplan.cpp  solverprocure.cpp
test/: Makefile.am
test/lpsolver_1/: init.py  lpsolver_1.xml
(+2 files in other folders)
